Bug 390475 - Muon does not show the change log for any package instead displays this text "The list of changes is not yet available. Please use Launchpad instead."
Summary: Muon does not show the change log for any package instead displays this text ...
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (show other bugs)
Version: 5.6
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-14 20:22 UTC by nrbrtx
Modified: 2018-02-20 14:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nrbrtx 2018-02-14 20:22:27 UTC
Steps to reproduce:
1. Install Ubuntu 16.04 LTS.
2. Install `muon` and `muon-discover` packages.
3. Launch Muon.
4. Try to get changelog for official package which is available in repositories (such as `samba`, `cups`, `smbclient`, `winbind`) - select package and click on "Changes List" tab.
5. Get the following text instead if changelog:
"The list of changes is not yet available. Please use Launchpad instead."

or

"ver: Apache
X-Content-Type-Options: nosniff
X-Frame-Options: sameorigin
Referrer-Policy: no-referrer
X-Xss-Protection: 1
Strict-Transport-Security: max-age=15552000
Public-Key-Pins: pin-sha256="br+Uf2+rkmMOzm4/4dHqwGyRXuGk1LC9DdGPIS0iPuU="; pin-sha256="0RzGS6yWFFS8w3jZZjWuXYwUXfELYh7KxcTmtlw0EMs="; max-age=5184000
Content-Length: 331
Keep-Alive: timeout=5, max=100
Connection: Keep-Alive
Content-Type: text/html; charset=iso-8859-1

<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
<html><head>
<title>404 Not Found</title>
</head><body>
<h1>Not Found</h1>
<p>The requested URL /changelogs/pool/main/c/cups/cups_2.1.3-4ubuntu0.3/changelog.txt was not found on this server.</p>
<hr>
<address>Apache Server at packages.debian.org Port 443</address>
</body></html>
HTTP/1.1 404 Not Found
Date: Fri, 01 Sep 2017 11:51:11 GMT
Server: Apache
X-Content-Type-Options: nosniff
X-Frame-Options: sameorigin
Referrer-Policy: no-referrer
X-Xss-Protection: 1
Strict-Transport-Security: max-age=15552000
Public-Key-Pins: pin-sha256="br+Uf2+rkmMOzm4/4dHqwGyRXuGk1LC9DdGPIS0iPuU="; pin-sha256="0RzGS6yWFFS8w3jZZjWuXYwUXfELYh7KxcTmtlw0EMs="; max-age=5184000
Content-Length: 331
Keep-Alive: timeout=5, max=99
Connection: Keep-Alive
Content-Type: text/html; charset=iso-8859-1

<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
<html><head>
<title>404 Not Found</title>
</head><body>
<h1>Not Found</h1>
<p>The requested URL /changelogs/pool/main/c/cups/cups_2.1.3-4ubuntu0.3/changelog.txt was not found on this server.</p>
<hr>
<address>Apache Server at packages.debian.org Port 443</address>
</body></html>"

Expected results:
Muon is able to show changelog for packages.

Actual results:
Muon is unable to show changelog for packages.

Notes:
1. `apt-get changelog samba cups` returns changelog from http://changelogs.ubuntu.com as expected.
2. It seems that Muon was incorectly setup after importing from Debian.

Downstream bug-report:
https://bugs.launchpad.net/bugs/1468192
Comment 1 Carlo Vanini 2018-02-20 14:23:48 UTC
Git commit 925a86afe3a5ffdd9ed597ee71e42bc74eec1c5b by Carlo Vanini.
Committed on 20/02/2018 at 14:17.
Pushed by vanini into branch 'master'.

Fix Changelog URL

Summary:
Use apt-pkg to get the correct URL to fetch the Changelog.

Test Plan: Muon now shows the Changelog in the respective tab.

Reviewers: sitter

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D10656

M  +8    -26   src/package.cpp

https://commits.kde.org/libqapt/925a86afe3a5ffdd9ed597ee71e42bc74eec1c5b