Fix Changelog URL

Summary:
Use apt-pkg to get the correct URL to fetch the Changelog.

BUG: 390475

Test Plan: Muon now shows the Changelog in the respective tab.

Reviewers: sitter

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D10656